# sammi

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .zenodo.json  CHANGELOG.rst  MANIFEST.in  README.md  README.rst  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: codestyle.yml  docs.yml  release.yml  test-release.yml  testing.yml
docs/: acknowledging.rst  api.rst  conf.py  index.rst
docs/dev-guide/: code_standards.rst  docs.rst  index.rst  maintainer_workflow.rst  tests.rst
docs/user-guide/: cdf_attribute_management.rst  cdf_format_guide.rst  cdf_validation.rst  index.rst  install_guide.rst  schema_information_guide.rst
sammi/: CITATION.rst  cdf_attribute_manager.py  schema.py  validation.py
sammi/data/: default_global_acdd_attrs_schema.yaml  default_global_cdf_attrs_schema.yaml  default_global_cf_attrs_schema.yaml  default_global_gesdisc_attrs_schema.yaml  default_variable_acdd_attrs_schema.yaml  default_variable_cdf_attrs_schema.yaml  default_variable_cf_attrs_schema.yaml  default_variable_gesdisc_attrs_schema.yaml  swxsoc_default_global_cdf_attrs_schema.yaml  swxsoc_default_variable_cdf_attrs_schema.yaml
sammi/tests/: test_cdf_attribute_manager.py  test_schema.py  test_validation.py
sammi/tests/test_data/: default_global_test_cdf_attrs.yaml  imap_default_global_cdf_attrs.yaml  imap_test_variable.yaml  test_invalid.cdf  test_valid.cdf
swxschema/: schema.py
swxschema/data/: swxsoc_default_global_cdf_attrs_schema.yaml  swxsoc_default_variable_cdf_attrs_schema.yaml
